--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
         <a href="#">blogs</a>
     </div>
 
-    <div class="credit">created by <span>mr. web designer</span> | all rights reserved</div>
+    <div class="credit">created by <span>IsraTech</span> | all rights reserved</div>
 
 </section>
 
